--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=gateway
+spring.application.name=gateway-server
+server.port=8080
+spring.profiles.active=dev
+spring.config.import=configserver:http://localhost:8888
