--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=gateway-server
 server.port=8080
 spring.profiles.active=dev
 spring.config.import=configserver:http://localhost:8888
+management.endpoints.web.exposure.include=*
+zipkin.baseurl=http://localhost:9411
+spring.cloud.gateway.discovery.locator.enabled=true
